--- a/app/globals.css
+++ b/app/globals.css
@@ -1,107 +1,98 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono",
-    "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Source Code Pro",
-    "Fira Mono", "Droid Sans Mono", "Courier New", monospace;
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&family=Roboto+Condensed:wght@400;700&display=swap");
 
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+:root{
+  --primary-color: #322659;
+  --secondary-color: #805ad5;
+  --third-color: #d53f8c;
+  --fourth-color: #471b24;
+  --white-color: #ffffff;
+  --grey-color:#b8bacb;
+  --body-font: "Inter", sans-serif;
+  --border-radius: 1rem;
+  --small-radius: 5px;
 }
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
 * {
   box-sizing: border-box;
-  padding: 0;
   margin: 0;
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-a {
-  color: inherit;
+  padding: 0;
   text-decoration: none;
+  border: none;
+  outline: none;
+  list-style: none;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+html{
+  scroll-behavior: smooth;
+}
+body{
+  font-family: var(--body-font);
+}
+.container{
+  width: 95%;
+  max-width: 1800px;
+  margin-inline: auto;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.Describtion{
+  width: 35%;
+}
+h1{
+  font-size: 2rem;
+  font-weight: 600;
+}
+h2, h4, h1{
+  color: var(--primary-color);
+}
+h3{
+  color: #5e557d;
+  font-size: 1rem;
+  font-weight: 500;
+  margin-bottom: 1rem;
+  text-transform: uppercase;
+}
+h1 span{
+  color: var(--third-color);
+}
+h2 span{
+  color: var(--secondary-color);
+}
+p{
+  color: #989bb4;
+  margin: 1rem 0 1rem 0;
+  line-height: 1.5;
+}
+.btn button{
+  border-radius: var(--small-radius);
+  cursor: pointer;
+  width: 8.5rem;
+  height: 2.7rem;
+  font-size: 1.1rem;
+  font-weight: 500;
+}
+.btn .button{
+  background-color: var(--third-color);
+  color: var(--white-color);
+}
+.btn .button1{
+  background-color: var(--white-color);
+  border: 1px solid var(--third-color);
+  color: var(--third-color);
+  margin-left: .7rem;
+}
+.btn .button1:hover{
+    background-color: #f7eef2;
+}
+.title{
+  text-align: center;
+}
+.title p{
+  max-width: 40rem;
+}
+.section {
+  margin-top: 7rem;
+}
+.section .container{
+  display: flex;
+  flex-direction: column;
 }
