--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,230 +1,190 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
-  padding: 6rem;
-  min-height: 100vh;
-}
-
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
-}
-
-.description a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
-}
-
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
-}
-
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-  text-wrap: balance;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: "";
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
+@media (min-width: 769px) and (max-width: 1200px) {
+  .links {
+    display: block;
+    position: fixed;
+    right: -100%;
+    top: 5rem;
+    flex-direction: column;
+    background-color: black;
+    width: 100%;
+    border-radius: var(--small-radius);
+    text-align: start;
+    transition: 0.3s;
+    padding: 2rem;
+    z-index: 9999;
   }
-
-  .card:hover span {
-    transform: translateX(4px);
+  .links li{
+    margin-bottom: 2rem;
+    color: var(--white-color);
+  }
+  .links .btn{
+    display: flex;
+    justify-content: space-between;
+  }
+  .links .btn button,
+  #Language{
+    height: 2rem;
+  }
+  .links .btn .button{
+    background-color: var(--secondary-color);
+  }
+  .links.active {
+    right: 0%;
+  }
+  .hamburger {
+    display: block;
+    cursor: pointer;
+  }
+  .hamburger.active .bar:nth-child(1) {
+    transform: translateY(8px) rotate(45deg);
+  }
+  .hamburger.active .bar:nth-child(2) {
+    opacity: 0;
+  }
+  .hamburger.active .bar:nth-child(3) {
+    transform: translateY(-8px) rotate(-45deg);
+  }
+  header .container {
+    justify-content: space-between;
+  }
+  header .img{
+    top: -10rem;
+    left: -7rem;
+  }
+  .links a li.active{
+    color: var(--grey-color);
+  }
+  .Describtion{
+    width: 50rem;
+  }
+  .LandingPage .image img{
+    width: 90%;
+  }
+  .brands .companies{
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+  .work .box{
+    width: 18rem;
+  }
+  .cards .card{
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .conversation .container{
+    width: 95%;
+  }
+  .conversation .title p{
+    width: 40%;
+  }
+  .products .product{
+    grid-template-columns: repeat(2, 1fr);
+  }
+  .contact-us .contact{
+    padding: 7rem 3rem;
+  }
+  .contact-us .drop form .form{
+    gap: 1rem;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .footer .container{
+    gap: 5rem;
+  }
+  .services .container{
+    padding: 0 2rem;
   }
 }
-
-@media (prefers-reduced-motion) {
-  .card:hover span {
-    transform: none;
+@media screen and (max-width: 768px) {
+  header .img{
+    top: -10rem;
+    left: -7rem;
   }
-}
-
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
+  .LandingPage .container{
+    flex-direction: column-reverse;
   }
-
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
+  .LandingPage .Describtion{
+    width: 75%;
     text-align: center;
   }
-
-  .card {
-    padding: 1rem 2.5rem;
-  }
-
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
-
-  .center {
-    padding: 8rem 0 6rem;
-  }
-
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
-
-  .description {
-    font-size: 0.8rem;
-  }
-
-  .description a {
-    padding: 1rem;
-  }
-
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
-
-  .description p {
+  .LandingPage .image img{
     align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
   }
-
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
-    padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
+  .brands .companies{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
-}
-
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
+  .work{
+    flex-direction: column;
   }
-}
-
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
+  .work .box{
+    flex-direction: column;
+    width: 40rem;
   }
-
-  .logo {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
+  .work .box img{
+    align-self: center;
+    margin-bottom: 1rem;
   }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
+  .work .content{
+    padding: 0 2rem 2rem 2rem;
+    text-align: center;
   }
-  to {
-    transform: rotate(0deg);
+  .cards .card{
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .cards .img {
+    width: 35rem;
+  }
+  .cards .content {
+    width: 30rem;
+  }
+  .conversation .container{ 
+    width: 95%;
+  }
+  .conversation .title{
+    flex-direction: column;
+    gap: 0;
+    align-items: center;
+  }
+  .conversation .title p{
+    width: 90%;
+  }
+  .products .product{
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .products .product .box{
+    padding: 5rem;
+  }
+  .contact-us .container{
+    flex-direction: column;
+  }
+  .contact-us .contact, 
+  .contact-us .drop{
+    width: 90%;
+  }
+  .footer .container{
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+    align-items: start;
+    padding-left: 2rem;
+  }
+  .footer .copyright {
+    padding: 0;
+  }
+  .development{
+    flex-direction: column;
+    align-items: center;
+  }
+  .development .image{
+    width: 80%;
+  }
+  .development .details{
+    width: 90%;
+    padding: 0;
+    text-align: center;
+  }
+  .services:nth-child(3) .development,
+  .marketing:nth-child(2) .development{
+    flex-direction: column-reverse;
+  }
+  .marketing:nth-child(3) .development{
+    flex-direction: column;
   }
 }
